--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -85,7 +85,7 @@
         "username_not_empty": "用户名不能为空！",
         "not_zh": "不能是汉字！",
         "password_length_limit": "密码长度不得少于 6 位！",
-        "number_or_alphabet": "只能是数字或字母！"
+        "number_and_alphabet": "密码应包含字母和数字！"
       }
     },
     "register": {
@@ -98,7 +98,7 @@
         "username_not_empty": "用户名不能为空！",
         "not_zh": "不能是汉字！",
         "password_length_limit": "密码长度不得少于 6 位！",
-        "number_or_alphabet": "只能是数字或字母！",
+        "number_and_alphabet": "密码应包含字母和数字！",
         "password_confirm_not_equal": "两次输入的密码不一致！"
       }
     },
