--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -1,7 +1,7 @@
 {
   "info": {
     "not_login": "尚未登录",
-    "copy_to_clipboard": "复制链接到剪切板："
+    "copy_to_clipboard": "链接已复制到剪切板："
   },
   "success": {
     "add": "添加成功",
@@ -46,7 +46,10 @@
     "about": "关于"
   },
   "home": {
-    "frontend": "前端"
+    "frontend": "前端",
+    "latest": "最新发布",
+    "popular": "热门",
+    "random": "随便看看"
   },
   "not_found": {
     "page_not_found": "页面找不到啦...",
@@ -165,5 +168,8 @@
     "default_open_drawer": "默认展示侧边栏",
     "language": "语言",
     "show_markdown_guide": "展示 Markdown Demo"
+  },
+  "markdown": {
+    "placeholder": "支持Markdown、纯文本格式..."
   }
 }
