--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -67,7 +67,7 @@
   },
   "article_publish": {
     "to_publish": "去发布",
-    "publish_prompt": "登录成功后可发布文章...",
+    "publish_prompt": "登录成功后可发布...",
     "add_article": "添加文章",
     "title": "标题",
     "category": "文章类别",
