--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,7 +9,8 @@
     "login": "Sign in successfully",
     "logout": "Sign out successfully",
     "register": "Registration successfully",
-    "upload": "Upload successfully"
+    "upload": "Upload successfully",
+    "comment": "Comment successfully"
   },
   "error": {
     "add": "Added failed",
@@ -18,6 +19,7 @@
     "logout": "Sign out failed",
     "register": "Registration failed",
     "upload": "Upload failed",
+    "comment": "Comment failed",
     "server_internal_error": "Server internal error",
     "network_connection_failed": "Network connection failed",
     "login_first": "Sign in first, please"
@@ -32,7 +34,7 @@
   },
   "nav": {
     "home": "Home",
-    "article_category": "Article category",
+    "article_category": "Notes category",
     "frontend": "Frontend",
     "mobile": "Mobile",
     "backend": "Backend",
@@ -61,9 +63,17 @@
     "total_words": "Total words:",
     "views": "Views:",
     "subscribe": "Subscribe",
-    "comments": "Comments:",
+    "reviews": "Reviews:",
     "collections": "Collections:",
-    "likes": "Likes:"
+    "likes": "Likes:",
+    "comment": "Comment",
+    "reviews_total": "Total",
+    "add_review": "Comment",
+    "add": "Comment",
+    "after_login": "Sign in to comment...",
+    "rule": {
+      "content_length_limit": "Comment less than 8 digits"
+    }
   },
   "article_publish": {
     "to_publish": "To publish",
