--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -9,7 +9,8 @@
     "login": "登录成功",
     "logout": "签出成功",
     "register": "注册成功",
-    "upload": "上传成功"
+    "upload": "上传成功",
+    "comment": "评论发表成功"
   },
   "error": {
     "add": "添加失败",
@@ -18,6 +19,7 @@
     "logout": "签出失败",
     "register": "注册失败",
     "upload": "上传失败",
+    "comment": "评论发表失败",
     "server_internal_error": "服务器内部错误",
     "network_connection_failed": "网络连接失败",
     "login_first": "请先登录"
@@ -61,9 +63,17 @@
     "total_words": "总字数：",
     "views": "被阅读：",
     "subscribe": "关注",
-    "comments": "评论数：",
+    "reviews": "评论数：",
     "collections": "收藏：",
-    "likes": "获赞："
+    "likes": "获赞：",
+    "comment": "评论",
+    "reviews_total": "条",
+    "add_review": "发表评论",
+    "add": "发表",
+    "after_login": "登录后即可发表评论...",
+    "rule": {
+      "content_length_limit": "评论字数不能少于 8 位！"
+    }
   },
   "article_publish": {
     "to_publish": "去发布",
