chore: markdown styles

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -68,7 +68,7 @@
     "collections": "Collections:",
     "likes": "Likes:",
     "comment": "Comment",
-    "reviews_total": "Total",
+    "reviews_total": "Reviews",
     "add_review": "Comment",
     "add": "Comment",
     "after_login": "Sign in to comment",
