--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -64,11 +64,11 @@
     "total_words": "总字数：",
     "views": "被阅读：",
     "subscribe": "关注",
-    "reviews": "评论数：",
+    "reviews": "评论数",
     "collections": "收藏：",
     "likes": "获赞：",
     "comment": "评论",
-    "reviews_total": "条",
+    "reviews_total": "条评论",
     "add_review": "发表评论",
     "add": "发表",
     "after_login": "登录后即可参与讨论",
